RAD-248 minor cleanup
* fix javadoc summary PatientDashboardRadiologyTabPortletController.get()
* add missing @should to PatientDashboardRadiologyTabPortletController.get()
* remove @SuppressWarning from PatientDashboardRadiologyTabPortletControllerTest
* fix css lint 'Prohibit zero units'
* clean GutterListExt imports
* rename TabId to 'patientDashboardRadiologyTab'
* added linebreak in Orders tab between "Add Radiology Order" and top

--- a/omod/src/main/webapp/resources/radiology.css
+++ b/omod/src/main/webapp/resources/radiology.css
@@ -50,7 +50,7 @@ margin:0 1px 0 0;
 #radiologyTabs ul, #radiologyTabs li {
 	display: inline;
 	list-style-type: none;
-	padding: 0px 0px 0px 0px;
+	padding: 0 0 0 0;
 }
 
 #radiologyTabs a:link, #radiologyTabs a:visited {
