--- a/omod/src/main/webapp/resources/css/radiology.css
+++ b/omod/src/main/webapp/resources/css/radiology.css
@@ -28,7 +28,7 @@ margin:0 1px 0 0;
 #radiologyTabsList {
         font-size: 0.8em;
 }
-#radiologyReports, #radiologyOrders {
+#radiologyReports, #radiologyOrders, #radiologyReportTemplates {
         font-size: 0.9em;
         padding-left: 5px;
         padding-right: 5px;
