RAD-162 Integrate icons into lists
* add non filtered file extensions to pom.xml
* add font-awesome css and fonts
* add action column to order and report datatable
* add new expand icon to order datatable

--- a/omod/src/main/webapp/resources/css/radiology.css
+++ b/omod/src/main/webapp/resources/css/radiology.css
@@ -64,3 +64,6 @@ margin:0 1px 0 0;
 #radiologyTabs a:hover {
 	text-decoration: underline;
 }
+.fa-chevron-circle-down, .fa-chevron-circle-up{
+	color: #1AAD9B;
+}
