RAD-162 Integrate icons into lists
Use icons for report status in report list

* add icons for report status to datatable in radiologyReportsTab.jsp
* add css styling for icons
* remove not needed jquery tooltip function call in providerField.tag
* add new datatable version 1.10.12 to fix wrong behaviour on table initialization (no data message at the left side)

--- a/omod/src/main/webapp/resources/css/radiology.css
+++ b/omod/src/main/webapp/resources/css/radiology.css
@@ -37,3 +37,12 @@ margin:0 1px 0 0;
 .fa-chevron-circle-down, .fa-chevron-circle-up{
 	color: #1AAD9B;
 }
+.fa-check-circle{
+	color: #1AAD9B;
+}
+.fa-times-circle{
+	color: #ff0000;
+}
+.fa-circle{
+	color: #f4920b;
+}
